--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Configuration" asp-action="Index">Configuration</a></li>
+                    <li><a asp-area="" asp-controller="Configuration" asp-action="Index">Konfiguracja</a></li>
+                    <li><a asp-area="" asp-controller="Offer" asp-action="Index">Oferty</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     @if (User.Identity.IsAuthenticated)
